vocabulary and queries